src/objects/Survey_Answer__c.object
<CustomObject>
    <description>Object to store community survey answers by user.</description>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Field to store survey answer</description>
        <label>Answer</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Master detail to case object.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey Answers</relationshipLabel>
        <relationshipName>Survey_Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Non_Personal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked  indicates the survey is non personnel</description>
        <label>Non Personal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <description>Master detail to survey question object.</description>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>Survey Answers</relationshipLabel>
        <relationshipName>Survey_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Answer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>